--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a href="#contact-info">Contact Me</a>
                 </li>
                 <li>
-                    <a href="#resume">Resumé</a>
+                    <a href="https://docs.google.com/document/d/162ZTJfUHLL0dFPw0SfWqyY7qahIx2vP0AhtKRQ-ecec/">Resumé</a>
                 </li>
             </ul>
         </nav>
@@ -41,6 +41,7 @@
 
     <!-- Applications Section -->
     <section class="applications" id="applications">
+        <h2>My Projects</h2>
         <article class="app1">
             <a href="https://stebbio.github.io/run-buddy/">
             <img src="./assets/Photos/run-buddy.png" alt="Run Buddy application" />
@@ -68,6 +69,14 @@
                 <p>HTML | CSS</p>
             </div>
         </article>
+    </section>
+
+    <!-- Contact Section -->
+    <section class="contact" id="contact-info">
+        <h2>Contact Me</h2>
+        <p>214-708-4072</p>
+        <p>stefodd@yahoo.com</p>
+        <a href="https://github.com/StebbiO">GitHub</a>
     </section>
 </body>
 </html>
