--- a/index.html
+++ b/index.html
@@ -33,26 +33,25 @@
     <!-- Bio Section -->
     <section class="bio" id="biography">
         <h2 class="section-border">Biography</h2>
+        <section class="apps-box">
         <img src="./assets/Photos/bio-pic.jpg" alt="Yours truly, smiling and excited to start coding!" />
-        <p>
-            Hello and welcome to my portfolio page! My name is Stefan Oddsson, and I am a 27 year-old Dallas native looking to become an entry-level coder. Below you will find links to examples of my work, my contact information, and my resumé that you can freely browse to see if my skillset will be a good fit for you. 
-            I am a graduate of the University of Texas at Austin, and I am currently learning HTML, CSS, and JavaScript. When I'm not coding, I enjoy traveling abroad, especially to Iceland, keeping up with European football, and staying in shape through weightlifting and running. If you have any questions regarding myself or my work, please contact me through any method below. Thank you for stopping by!
-        </p>
+        <p>Hello and welcome to my portfolio page! My name is Stefan Oddsson, and I am a 27 year-old Dallas native looking to become an entry-level coder. Below you will find links to examples of my work, my contact information, and my resumé that you can freely browse to see if my skillset will be a good fit for you. I am a graduate of the University of Texas at Austin, and I am currently learning HTML, CSS, and JavaScript. When I'm not coding, I enjoy traveling abroad, especially to Iceland, keeping up with European football, and staying in shape through weightlifting and running. If you have any questions regarding myself or my work, please contact me through any method below. Thank you for stopping by!</p>
+        </section>
     </section>
 
     <!-- Applications Section -->
     <section class="applications" id="applications">
         <h2 class="section-border">My Projects</h2>
-        <article class="app-one">
-            <a href="https://stebbio.github.io/run-buddy/">
-            <img src="./assets/Photos/run-buddy.png" alt="Run Buddy application" />
-            </a>
-            <div class="app-text">
-                <h3>Run Buddy</h3>
-                <p>HTML | CSS</p>
-            </div>
-        </article>
         <section class="apps-box">
+            <article class="app-one">
+                <a href="https://stebbio.github.io/run-buddy/">
+                <img src="./assets/Photos/run-buddy.png" alt="Run Buddy application" />
+                </a>
+                <div class="app-text">
+                    <h3>Run Buddy</h3>
+                    <p>HTML | CSS</p>
+                </div>
+            </article>
             <article class="apps">
                 <a href="https://stebbio.github.io/robot-gladiators/">
                 <img src="./assets/Photos/Robots.jpg" alt="Robot Gladiators" />
@@ -76,10 +75,14 @@
 
     <!-- Contact Section -->
     <section class="contact" id="contact-info">
-        <h2>Contact Me</h2>
-        <p>214-708-4072</p>
-        <p>stefodd@yahoo.com</p>
-        <a href="https://github.com/StebbiO">GitHub</a>
+        <h2 class="section-border">Contact Me</h2>
+            <p>214-708-4072</p>
+            <p>stefodd@yahoo.com</p>
+            <a href="https://github.com/StebbiO">GitHub</a>
     </section>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
