added pokehunt project

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
         <h2 class="section-border">My Projects</h2>
         <section class="apps-box">
             <article class="app-one">
-                <a href="https://stebbio.github.io/run-buddy/">
-                <img src="./assets/Photos/run-buddy.png" alt="Run Buddy application" />
+                <a href="https://stebbio.github.io/PokeHunt/">
+                <img src="./assets/Photos/pokehunt.png" alt="PokeHunt" />
                 </a>
                 <div class="app-text">
-                    <h3>Run Buddy</h3>
-                    <p>HTML | CSS</p>
+                    <h3>Pokehunt</h3>
+                    <p>HTML | CSS | JavaScript</p>
                 </div>
             </article>
             <article class="apps">
