--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
                 </div>
             </article>
             <article class="apps">
-                <a href="https://stebbio.github.io/refactor-challenge-1/">
-                <img src="./assets/Photos/horiseon.jpg" alt="Company landing-page" />
+                <a href="https://cryptic-taiga-66100.herokuapp.com/">
+                <img src="./assets/Photos/books.png" alt="Books of Alexandria webpage" />
                 </a>
                 <div class="app-text">
-                    <h3>Company Landing-Page</h3>
+                    <h3>Books of Alexandria</h3>
                     <p>HTML | CSS</p>
                 </div>
             </article>
